/*
  Licensed to the Apache Software Foundation (ASF) under one or more
  contributor license agreements.  See the NOTICE file distributed with
  this work for additional information regarding copyright ownership.
  The ASF licenses this file to You under the Apache License, Version 2.0
  (the "License"); you may not use this file except in compliance with
  the License.  You may obtain a copy of the License at
  
      http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
 */

syntax = "proto3";
package io.protostuff.runtime.model;

message User{
	string name = 1;
}

message RequestHeader{
	string destMicroservice = 1;
	int32 msgType = 2;
	int32 flags = 3;
	string schemaId = 5;
	string operationName = 6;
	map<string, string> cseContext = 7;
	map<string, User> userMap = 8;
	repeated string list = 9;
	repeated User userList = 10;
}
